[metadata]
name = tno.mpc.protocols.secure_inner_join
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Secure inner join using Paillier homomorphic encryption and a helper party
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    protocols
    secure inner join
    matching
    fuzzy
    approximate matching
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.protocols.secure_inner_join/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/protocols/secure_inner_join/1.0.0
    Source Code = https://github.com/TNO-MPC/protocols.secure_inner_join
version = attr: tno.mpc.protocols.secure_inner_join.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.protocols.secure_inner_join
    tno.mpc.protocols.secure_inner_join.test
zip_safe = False
install_requires =
    mypy_extensions
    numpy
    randomgen
    tno.mpc.communication[bitarray]>=3.1.0
    tno.mpc.encryption_schemes.paillier>=0.5.0
namespace_packages =
    tno
    tno.mpc
    tno.mpc.protocols
include_package_data = True

[options.package_data]
tno.mpc.protocols.secure_inner_join = py.typed

[options.extras_require]
gmpy =
    tno.mpc.encryption_schemes.paillier[gmpy]
tests =
    pytest
    pytest-asyncio
